--- a/2phase/23-ttest_hypothesis_testing.ipynb
+++ b/2phase/23-ttest_hypothesis_testing.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.025380Z",
-     "start_time": "2023-08-31T23:45:34.489691Z"
+     "end_time": "2023-09-01T16:45:02.271790Z",
+     "start_time": "2023-09-01T16:45:00.796795Z"
     }
    },
    "outputs": [],
@@ -204,11 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.572340Z",
-     "start_time": "2023-08-31T23:45:36.026348Z"
+     "end_time": "2023-09-01T16:45:09.438790Z",
+     "start_time": "2023-09-01T16:45:08.764820Z"
     }
    },
    "outputs": [
@@ -371,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.587340Z",
-     "start_time": "2023-08-31T23:45:36.573340Z"
+     "end_time": "2023-09-01T16:48:34.688756Z",
+     "start_time": "2023-09-01T16:48:34.671756Z"
     },
     "collapsed": true
    },
@@ -469,7 +469,9 @@
     "> - Pachyderm Adventures has recently measured the weights of $20$ African elephants in Gabon  \n",
     "> - This group of Gabonese elephants were measured to have an average weight at $8562$ lbs. \n",
     ">\n",
-    "> The claim is that these Gabonese elephants are significantly different. Let's find out!"
+    "> The claim is that these Gabonese elephants are significantly different. Let's find out! (two-sided)\n",
+    "\n",
+    "these Gabonese elephants are less than the african elephants (one-sided)"
    ]
   },
   {
@@ -503,7 +505,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test?"
+    "# Test?\n",
+    "\n",
+    "t-test (two sided)"
    ]
   },
   {
@@ -512,7 +516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# H_0?"
+    "# H_0?\n",
+    "There is no difference between the sample and the population\n"
    ]
   },
   {
@@ -521,16 +526,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# H_A?"
+    "# H_A?\n",
+    "\n",
+    "There IS a difference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q: these Gabonese elephants are less than the african elephants (one-sided)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "one sided H_O\n",
+    "the gabonese equal to or greater than\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one sided HG_A\n",
+    "\n",
+    "the gabonese elephants ave is LESS than"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.602340Z",
-     "start_time": "2023-08-31T23:45:36.588340Z"
+     "end_time": "2023-09-01T16:59:33.284353Z",
+     "start_time": "2023-09-01T16:59:33.277353Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-18af074ce652>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-18af074ce652>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    >\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    ">\n",
+    "=\n",
+    "<"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:03:14.748099Z",
+     "start_time": "2023-09-01T17:03:14.734099Z"
     }
    },
    "outputs": [],
@@ -546,11 +610,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.618339Z",
-     "start_time": "2023-08-31T23:45:36.603340Z"
+     "end_time": "2023-09-01T17:03:18.187099Z",
+     "start_time": "2023-09-01T17:03:18.170100Z"
     }
    },
    "outputs": [
@@ -621,11 +685,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.649340Z",
-     "start_time": "2023-08-31T23:45:36.634339Z"
+     "end_time": "2023-09-01T17:57:20.168298Z",
+     "start_time": "2023-09-01T17:57:20.150298Z"
     }
    },
    "outputs": [
@@ -635,7 +699,7 @@
        "-6.785944569870411"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,28 +717,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.665339Z",
-     "start_time": "2023-08-31T23:45:36.652340Z"
-    }
+     "end_time": "2023-09-01T17:28:11.813544Z",
+     "start_time": "2023-09-01T17:28:11.794542Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.7291328115213678"
+       "-2.063898561628021"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate our t-critical value t*\n",
-    "stats.t.ppf(0.05, n-1)"
+    "stats.t.ppf(0.025, n-1)"
    ]
   },
   {
@@ -735,7 +800,9 @@
    },
    "outputs": [],
    "source": [
-    "# Your Answer Here"
+    "# Your Answer Here\n",
+    "H_0 = no difference in lattes\n",
+    "H_A = lattes are different"
    ]
   },
   {
@@ -747,10 +814,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:28:44.579064Z",
+     "start_time": "2023-09-01T17:28:44.567068Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject null\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu = 4\n",
+    "x_bar = 4.6\n",
+    "sample_std = 0.22\n",
+    "n = 25\n",
+    "\n",
+    "t_stat = (x_bar - mu)/(sample_std/np.sqrt(n))\n",
+    "t_critical = abs(stats.t.ppf(0.995, n-1))\n",
+    "\n",
+    "if t_stat > t_critical:\n",
+    "    print('Reject null')\n",
+    "else:\n",
+    "    print('Cannot reject null')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:28:45.132067Z",
+     "start_time": "2023-09-01T17:28:45.117066Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13.63636363636363, 2.796939504772804)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_stat, t_critical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:28:45.611066Z",
+     "start_time": "2023-09-01T17:28:45.592066Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value:  4.242714627951655e-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"p-value: \", stats.t(df=24).sf(t_stat))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -812,10 +952,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:44:22.005394Z",
+     "start_time": "2023-09-01T17:44:21.996392Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-2e0666158fe1>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-20-2e0666158fe1>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    H_0 = pants-a-torium same\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "H_0 = pants-a-torium same\n",
+    "H_A = are different"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -826,10 +983,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:45:56.397506Z",
+     "start_time": "2023-09-01T17:45:56.387505Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "pants = [20, 30, 30, 50, 75, 25, 30, 30, 40, 80]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:45:56.646503Z",
+     "start_time": "2023-09-01T17:45:56.632503Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "statistic, p_value = stats.ttest_1samp(pants, 58)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:46:00.890791Z",
+     "start_time": "2023-09-01T17:46:00.884793Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03022035629578255"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -897,7 +1100,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<details>\n",
+    "    <summary>Answer</summary>\n",
+    "Null: The delivery times for the restaurants in Neighborhood A are the same as the times for the restaurants in Neighborhood B. <br/>\n",
+    "Alternative: The delivery times for the restaurants in Neighborhood A are NOT the same as the times for the restaurants in  Neighborhood B.\n",
+    "    </details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Perform the test.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Answer</summary>\n",
+    "    This is a TWO-SAMPLE problem. So we'll use stats.ttest_ind_from_stats(). The two sets don't have exactly the same variance, so we'll perform Welch's test by setting the equal_var parameter to False. <br/>\n",
+    "    <code>delivery_times_A = [28.4, 23.3, 30.4, 28.1, 29.4, 30.6, 27.8, 30.9, 27.0, 32.8]\n",
+    "mean_A = np.mean(delivery_times_A)\n",
+    "std_A = np.std(delivery_times_A)\n",
+    "nobs_A = len(delivery_times_A)\n",
+    "mean_B = 26.8\n",
+    "std_B = 2.6\n",
+    "nobs_B = 10\n",
+    "stats.ttest_ind_from_stats(mean1=mean_A, std1=std_A, nobs1=nobs_A,\n",
+    "                          mean2=mean_B, std2=std_B, nobs2=nobs_B,\n",
+    "        equal_var=False)</code>\n",
+    "</details>"
    ]
   },
   {
@@ -920,6 +1154,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Answer</summary>\n",
+    "    The p-value is greater than our threshold value of 5%, so we can't reject the null hypothesis that the two neighborhoods have the same restaurant delivery times.\n",
+    "    </details>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1308,11 +1552,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-31T23:45:36.713340Z",
-     "start_time": "2023-08-31T23:45:36.698342Z"
+     "end_time": "2023-09-01T17:47:51.785807Z",
+     "start_time": "2023-09-01T17:47:51.768792Z"
     }
    },
    "outputs": [
@@ -1423,6 +1667,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:49:11.655196Z",
+     "start_time": "2023-09-01T17:49:11.649196Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "s_1_2 = np.var(gab, ddof = 1)\n",
+    "s_2_2 = np.var(ken, ddof = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-01T17:49:18.622198Z",
+     "start_time": "2023-09-01T17:49:18.605198Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(87706.94736842105, 71046.83157894739)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_1_2, s_2_2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
@@ -1445,6 +1729,76 @@
    "source": [
     "stats.ttest_ind(gab, ken, equal_var=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1481,7 +1835,7 @@
     "width": "288px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
