--- a/2phase/26-ab-testing-prefilled.ipynb
+++ b/2phase/26-ab-testing-prefilled.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:19.576595Z",
-     "start_time": "2023-09-04T23:34:18.433565Z"
+     "end_time": "2023-09-06T16:31:36.724832Z",
+     "start_time": "2023-09-06T16:31:34.592830Z"
     },
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,18 +32,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Objectives"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Conduct an A/B test in Python\n",
     "- Interpret the results of the A/B tests for a stakeholder"
@@ -51,28 +47,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Example Together"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Question"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We have data about whether customers completed sales transactions, segregated by the type of ad banners to which the customers were exposed.\n",
     "\n",
@@ -81,28 +70,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Considerations"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "What would we need to consider when designing our experiment?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Might include:\n",
     "\n",
@@ -115,19 +97,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Loading the Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "First let's download the data from [kaggle](https://www.kaggle.com/podsyp/how-to-do-product-analytics) via the release page of this repo: https://github.com/flatiron-school/ds-ab_testing/releases \n",
     "\n",
@@ -136,15 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:25.701891Z",
-     "start_time": "2023-09-04T23:34:19.577565Z"
+     "end_time": "2023-09-06T16:31:49.881830Z",
+     "start_time": "2023-09-06T16:31:39.604831Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
-    "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
-    "hidden": true
+    "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
    },
    "outputs": [],
    "source": [
@@ -156,22 +132,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> Let's take a look while we're at it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:25.717890Z",
-     "start_time": "2023-09-04T23:34:25.702890Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:31:49.971833Z",
+     "start_time": "2023-09-06T16:31:49.948836Z"
+    }
    },
    "outputs": [
     {
@@ -294,7 +267,7 @@
        "4     sneakers       mobile  2019-04-24 09:19:02  banner_show       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,13 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:25.952890Z",
-     "start_time": "2023-09-04T23:34:25.718891Z"
+     "end_time": "2023-09-06T16:31:50.531831Z",
+     "start_time": "2023-09-06T16:31:50.037831Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -344,32 +316,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Some Exploration to Better Understand our Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Lets's look at the different banner types:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.031920Z",
-     "start_time": "2023-09-04T23:34:25.953924Z"
+     "end_time": "2023-09-06T16:32:17.696832Z",
+     "start_time": "2023-09-06T16:32:17.607833Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -384,7 +350,7 @@
        "Name: product, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,13 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.238919Z",
-     "start_time": "2023-09-04T23:34:26.032922Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:32:24.721831Z",
+     "start_time": "2023-09-06T16:32:24.395831Z"
+    }
    },
    "outputs": [
     {
@@ -420,7 +385,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,22 +396,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's look at the range of time-stamps on these data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.318889Z",
-     "start_time": "2023-09-04T23:34:26.239918Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:32:41.901833Z",
+     "start_time": "2023-09-06T16:32:41.623830Z"
+    }
    },
    "outputs": [
     {
@@ -455,7 +417,7 @@
        "'2019-01-01 00:00:25'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,13 +428,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.414890Z",
-     "start_time": "2023-09-04T23:34:26.320891Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:32:42.567836Z",
+     "start_time": "2023-09-06T16:32:42.394830Z"
+    }
    },
    "outputs": [
     {
@@ -481,7 +442,7 @@
        "'2019-05-31 23:59:21'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,22 +453,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's check the counts of the different site_version values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.494890Z",
-     "start_time": "2023-09-04T23:34:26.416919Z"
+     "end_time": "2023-09-06T16:32:50.609353Z",
+     "start_time": "2023-09-06T16:32:50.513353Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -519,7 +477,7 @@
        "Name: site_version, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,13 +488,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.574890Z",
-     "start_time": "2023-09-04T23:34:26.495916Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:33:00.555355Z",
+     "start_time": "2023-09-06T16:33:00.467352Z"
+    }
    },
    "outputs": [
     {
@@ -548,7 +505,7 @@
        "Name: title, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,13 +516,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.731919Z",
-     "start_time": "2023-09-04T23:34:26.576892Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:33:23.135331Z",
+     "start_time": "2023-09-06T16:33:22.943332Z"
+    }
    },
    "outputs": [
     {
@@ -574,7 +530,7 @@
        "(29395, 29395)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,13 +541,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:26.811012Z",
-     "start_time": "2023-09-04T23:34:26.732890Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:33:49.540332Z",
+     "start_time": "2023-09-06T16:33:49.414334Z"
+    }
    },
    "outputs": [
     {
@@ -647,7 +602,7 @@
        "order              1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,32 +613,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Experimental Setup"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We need to filter by site_version, time, and product:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.018010Z",
-     "start_time": "2023-09-04T23:34:26.811891Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:34:34.744332Z",
+     "start_time": "2023-09-06T16:34:34.424334Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -701,7 +650,6 @@
      "end_time": "2023-09-04T23:34:27.033891Z",
      "start_time": "2023-09-04T23:34:27.018919Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -836,19 +784,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### What Test Would Make Sense?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Since we're comparing the frequency of conversions of customers who saw the \"sneakers\" banner against those who saw the \"accessories\" banner, we can use a $\\chi^2$ test.\n",
     "\n",
@@ -857,19 +800,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### The Hypotheses"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "$H_0$: Customers who saw the sneakers banner were no more or less likely to buy than customers who saw the accessories banner.\n",
     "\n",
@@ -878,61 +816,47 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Setting a Threshold"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We'll set a false-positive rate of $\\alpha = 0.05$."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## $\\chi^2$ Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Setup the Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We need our contingency table: the numbers of people who did or did not submit orders, both for the accessories banner and the sneakers banner. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.048920Z",
-     "start_time": "2023-09-04T23:34:27.034921Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:36:07.578331Z",
+     "start_time": "2023-09-06T16:36:07.544333Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -942,13 +866,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.064892Z",
-     "start_time": "2023-09-04T23:34:27.049891Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:36:16.162333Z",
+     "start_time": "2023-09-06T16:36:16.144338Z"
+    }
    },
    "outputs": [
     {
@@ -957,7 +880,7 @@
        "(496, 799)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,22 +894,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "To get the numbers of people who didn't submit orders, we get the total number of people who were shown banners and then subtract the numbers of people who did make orders."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.080890Z",
-     "start_time": "2023-09-04T23:34:27.065890Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:36:36.842337Z",
+     "start_time": "2023-09-06T16:36:36.824337Z"
+    }
    },
    "outputs": [
     {
@@ -995,7 +915,7 @@
        "(12207, 12470)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,13 +932,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.096890Z",
-     "start_time": "2023-09-04T23:34:27.081917Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:36:46.943332Z",
+     "start_time": "2023-09-06T16:36:46.935331Z"
+    }
    },
    "outputs": [
     {
@@ -1028,7 +947,7 @@
        "       [  799, 12470]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,23 +963,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Calculation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.112915Z",
-     "start_time": "2023-09-04T23:34:27.098891Z"
+     "end_time": "2023-09-06T16:37:17.638330Z",
+     "start_time": "2023-09-06T16:37:17.627335Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1074,7 +989,7 @@
        "        [  661.61077314, 12607.38922686]]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,19 +1000,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "This extremely low $p$-value suggests that these two groups are genuinely performing differently. In particular, the desktop customers who saw the sneakers banner in May 2019 bought at a higher rate than the desktop customers who saw the accessories banner in May 2019."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Interpretation"
    ]
@@ -1109,8 +1019,7 @@
     "ExecuteTime": {
      "end_time": "2023-09-04T23:34:27.128981Z",
      "start_time": "2023-09-04T23:34:27.113891Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1134,10 +1043,9 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.144889Z",
-     "start_time": "2023-09-04T23:34:27.129920Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:38:22.364793Z",
+     "start_time": "2023-09-06T16:38:22.346793Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -1147,13 +1055,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-06T16:39:04.658305Z",
+     "start_time": "2023-09-06T16:39:04.648304Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.039045894670550266, 0.06021553998040546)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accessory_CR, sneaker_CR"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-04T23:34:27.160922Z",
-     "start_time": "2023-09-04T23:34:27.146892Z"
-    },
-    "hidden": true
+     "end_time": "2023-09-06T16:38:22.815798Z",
+     "start_time": "2023-09-06T16:38:22.807793Z"
+    }
    },
    "outputs": [
     {
@@ -1178,29 +1110,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "So we can say:\n",
     "- There was a statistically significant difference at the $\\alpha$-level (confidence level)\n",
-    "- The difference was about $2.3\\%$ in favor of the sneaker banner!"
+    "- The difference was about $2.1\\%$ in favor of the sneaker banner!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Exercise"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> The company is impressed with what you found and is now wondering if there is a difference in their other banner ads!\n",
     "\n",
@@ -1209,9 +1135,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Make sure you record what considerations you have for the experiment, what hypothesis test you performed ($H_0$ and $H_1$ too), and your overall conclusion/interpretation for the _business stakeholders_. Is there a follow-up you'd suggest? "
    ]
