--- a/3phase/37-logistic_regression.ipynb
+++ b/3phase/37-logistic_regression.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:05:05.521015Z",
-     "start_time": "2023-05-19T16:05:02.731513Z"
+     "end_time": "2023-09-22T18:54:13.056348Z",
+     "start_time": "2023-09-22T18:54:10.972343Z"
     }
    },
    "outputs": [],
@@ -148,11 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:07:13.643300Z",
-     "start_time": "2023-05-19T16:07:13.528269Z"
+     "end_time": "2023-09-22T18:54:16.130345Z",
+     "start_time": "2023-09-22T18:54:15.987347Z"
     }
    },
    "outputs": [
@@ -282,7 +282,7 @@
        "51   1.52320  13.72  3.72  0.51  71.75  0.09  10.06  0.0  0.16           1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:07:40.019585Z",
-     "start_time": "2023-05-19T16:07:40.001585Z"
+     "end_time": "2023-09-22T18:54:44.143497Z",
+     "start_time": "2023-09-22T18:54:44.123498Z"
     }
    },
    "outputs": [
@@ -447,7 +447,7 @@
        "51           0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,6 +460,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T18:55:10.665497Z",
+     "start_time": "2023-09-22T18:55:10.644497Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    163\n",
+       "1     51\n",
+       "Name: household, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glass.household.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -468,11 +495,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:07:57.450411Z",
-     "start_time": "2023-05-19T16:07:57.277379Z"
+     "end_time": "2023-09-22T18:54:47.585497Z",
+     "start_time": "2023-09-22T18:54:47.252500Z"
     }
    },
    "outputs": [
@@ -513,11 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:08:19.387668Z",
-     "start_time": "2023-05-19T16:08:19.350672Z"
+     "end_time": "2023-09-22T18:55:41.461500Z",
+     "start_time": "2023-09-22T18:55:41.426498Z"
     }
    },
    "outputs": [],
@@ -534,11 +561,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:08:25.151412Z",
-     "start_time": "2023-05-19T16:08:25.003409Z"
+     "end_time": "2023-09-22T18:55:44.299497Z",
+     "start_time": "2023-09-22T18:55:44.007498Z"
     }
    },
    "outputs": [
@@ -644,11 +671,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:10:29.920601Z",
-     "start_time": "2023-05-19T16:10:29.790601Z"
+     "end_time": "2023-09-22T18:57:11.583185Z",
+     "start_time": "2023-09-22T18:57:11.377185Z"
     }
    },
    "outputs": [
@@ -740,11 +767,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:13:00.845732Z",
-     "start_time": "2023-05-19T16:13:00.828229Z"
+     "end_time": "2023-09-22T19:03:02.610724Z",
+     "start_time": "2023-09-22T19:03:02.599722Z"
     }
    },
    "outputs": [
@@ -754,7 +781,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,11 +792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:13:02.901010Z",
-     "start_time": "2023-05-19T16:13:02.879014Z"
+     "end_time": "2023-09-22T19:03:03.521723Z",
+     "start_time": "2023-09-22T19:03:03.512724Z"
     }
    },
    "outputs": [
@@ -779,7 +806,7 @@
        "array([-inf,  inf])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,11 +824,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:13:34.612338Z",
-     "start_time": "2023-05-19T16:13:34.596307Z"
+     "end_time": "2023-09-22T19:03:48.165887Z",
+     "start_time": "2023-09-22T19:03:48.143888Z"
     }
    },
    "outputs": [],
@@ -811,11 +838,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:13:35.077122Z",
-     "start_time": "2023-05-19T16:13:35.061622Z"
+     "end_time": "2023-09-22T19:04:01.227890Z",
+     "start_time": "2023-09-22T19:04:01.214887Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00000000e-09, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 9.99999999e-01, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 9.99999999e-01, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       9.99999999e-01, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       9.99999999e-01, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 9.99999999e-01, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       9.99999999e-01, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 1.00000000e-09, 1.00000000e-09, 9.99999999e-01,\n",
+       "       9.99999999e-01, 1.00000000e-09, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       9.99999999e-01, 9.99999999e-01, 1.00000000e-09, 9.99999999e-01,\n",
+       "       9.99999999e-01, 1.00000000e-09, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 9.99999999e-01, 1.00000000e-09, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 9.99999999e-01, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 1.00000000e-09, 9.99999999e-01, 1.00000000e-09,\n",
+       "       1.00000000e-09, 9.99999999e-01, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 9.99999999e-01, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 9.99999999e-01, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 9.99999999e-01, 9.99999999e-01, 9.99999999e-01,\n",
+       "       9.99999999e-01, 9.99999999e-01])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_approx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:04:18.354889Z",
+     "start_time": "2023-09-22T19:04:18.316888Z"
     }
    },
    "outputs": [
@@ -825,7 +930,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,11 +946,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:13:35.989225Z",
-     "start_time": "2023-05-19T16:13:35.847726Z"
+     "end_time": "2023-09-22T19:04:20.832894Z",
+     "start_time": "2023-09-22T19:04:20.631888Z"
     }
    },
    "outputs": [
@@ -888,11 +993,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:18:23.310313Z",
-     "start_time": "2023-05-19T16:18:23.292812Z"
+     "end_time": "2023-09-22T19:07:33.627083Z",
+     "start_time": "2023-09-22T19:07:33.598084Z"
     }
    },
    "outputs": [],
@@ -909,11 +1014,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:18:26.173584Z",
-     "start_time": "2023-05-19T16:18:26.036614Z"
+     "end_time": "2023-09-22T19:07:34.614084Z",
+     "start_time": "2023-09-22T19:07:34.423085Z"
     }
    },
    "outputs": [
@@ -956,11 +1061,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:19:55.333299Z",
-     "start_time": "2023-05-19T16:19:55.317330Z"
+     "end_time": "2023-09-22T19:09:09.711326Z",
+     "start_time": "2023-09-22T19:09:09.695325Z"
     },
     "scrolled": true
    },
@@ -983,22 +1088,23 @@
        "Name: al, Length: 214, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "glass.al"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:26:20.340941Z",
-     "start_time": "2023-05-19T16:26:20.331416Z"
+     "end_time": "2023-09-22T19:09:11.922327Z",
+     "start_time": "2023-09-22T19:09:11.905327Z"
     }
    },
    "outputs": [],
@@ -1008,11 +1114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:26:22.510416Z",
-     "start_time": "2023-05-19T16:26:22.494416Z"
+     "end_time": "2023-09-22T19:09:12.477324Z",
+     "start_time": "2023-09-22T19:09:12.467326Z"
     }
    },
    "outputs": [
@@ -1022,7 +1128,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,11 +1139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:26:38.148418Z",
-     "start_time": "2023-05-19T16:26:38.143448Z"
+     "end_time": "2023-09-22T19:09:13.149328Z",
+     "start_time": "2023-09-22T19:09:13.139325Z"
     }
    },
    "outputs": [
@@ -1047,7 +1153,7 @@
        "array([[1, 2, 3]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,11 +1164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:26:48.564408Z",
-     "start_time": "2023-05-19T16:26:48.546408Z"
+     "end_time": "2023-09-22T19:09:15.384325Z",
+     "start_time": "2023-09-22T19:09:15.378324Z"
     }
    },
    "outputs": [
@@ -1074,7 +1180,7 @@
        "       [3]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,18 +1191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:21:42.164414Z",
-     "start_time": "2023-05-19T16:21:42.144915Z"
+     "end_time": "2023-09-22T19:10:14.340326Z",
+     "start_time": "2023-09-22T19:10:14.320328Z"
     },
     "scrolled": true
    },
@@ -1107,7 +1206,7 @@
        "array([[0.29]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,20 +1217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.reshape()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:22:39.374559Z",
-     "start_time": "2023-05-19T16:22:39.360558Z"
+     "end_time": "2023-09-22T19:10:20.082326Z",
+     "start_time": "2023-09-22T19:10:20.068331Z"
     },
     "scrolled": true
    },
@@ -1150,11 +1240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:25:47.561242Z",
-     "start_time": "2023-05-19T16:25:47.543742Z"
+     "end_time": "2023-09-22T19:10:20.565327Z",
+     "start_time": "2023-09-22T19:10:20.547326Z"
     },
     "scrolled": false
    },
@@ -1189,11 +1279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:30:51.220461Z",
-     "start_time": "2023-05-19T16:30:51.202463Z"
+     "end_time": "2023-09-22T19:12:32.830330Z",
+     "start_time": "2023-09-22T19:12:32.816332Z"
     }
    },
    "outputs": [],
@@ -1204,11 +1294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:30:51.934965Z",
-     "start_time": "2023-05-19T16:30:51.762461Z"
+     "end_time": "2023-09-22T19:12:33.872326Z",
+     "start_time": "2023-09-22T19:12:33.682329Z"
     }
    },
    "outputs": [
@@ -1243,21 +1333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T16:32:07.650122Z",
-     "start_time": "2023-05-19T16:32:07.630621Z"
+     "end_time": "2023-09-22T19:12:51.643326Z",
+     "start_time": "2023-09-22T19:12:51.627326Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.361506808726077"
+       "0.36150680872607704"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T16:32:44.688283Z",
@@ -1290,18 +1380,7 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6931471805599453"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "-np.log(0.5)"
    ]
